--- a/Script/Assignment5.ipynb
+++ b/Script/Assignment5.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 1,
    "id": "97f0a5a2-9d83-4db2-a339-f17f5292e282",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 2,
    "id": "d7648c52-4ed4-47ad-8862-b200367f81ab",
    "metadata": {},
    "outputs": [],
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 3,
    "id": "4e0f07c6-9bba-47de-95ce-1ef3c4b277be",
    "metadata": {},
    "outputs": [
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 4,
    "id": "77cacabe-8401-4831-941d-e1a1de861665",
    "metadata": {},
    "outputs": [
@@ -345,7 +345,7 @@
        "max           300.00  "
       ]
      },
-     "execution_count": 140,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -357,7 +357,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 5,
    "id": "0a830d43-18e8-4b21-b5c0-9edfb1eae65a",
    "metadata": {},
    "outputs": [
@@ -480,7 +480,7 @@
        "max             NaN        NaN      97.00"
       ]
      },
-     "execution_count": 141,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -501,7 +501,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 6,
    "id": "72300e22-ec23-4622-9ab4-4ab079503f42",
    "metadata": {},
    "outputs": [
@@ -528,7 +528,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 142,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -540,7 +540,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 143,
+   "execution_count": 7,
    "id": "285ce1ca-fec2-44b7-9827-003985d98fa5",
    "metadata": {},
    "outputs": [
@@ -560,7 +560,7 @@
        "dtype: int64"
       ]
      },
-     "execution_count": 143,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -581,7 +581,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 144,
+   "execution_count": 8,
    "id": "ff2c1026-53f5-4023-a285-96d3ce223372",
    "metadata": {},
    "outputs": [
@@ -711,7 +711,7 @@
        "4    Premium       33569      5371040                       53           160  "
       ]
      },
-     "execution_count": 144,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -725,7 +725,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 145,
+   "execution_count": 9,
    "id": "197795c5-8122-4e2d-a3f4-b417fb7588b5",
    "metadata": {},
    "outputs": [
@@ -806,7 +806,7 @@
        "4      Air Max     Budget         66"
       ]
      },
-     "execution_count": 145,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -826,7 +826,7 @@
     "## Which Join?\n",
     "**LEFT JOIN**\n",
     "\n",
-    "It's crucial to keep all sales records and find out the missing costs rather than removing records (which would impact total revenue calculations), we should better use a LEFT JOIN\n",
+    "It's better to keep all sales records and find out the missing costs rather than removing sales records (which would impact total revenue calculations), we should better use a LEFT JOIN\n",
     "\n",
     "## Why? \n",
     "- Ensures all sales records are retained\n",
@@ -841,7 +841,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 146,
+   "execution_count": 13,
    "id": "14ea9b21-0920-4e85-9162-fc60808a5707",
    "metadata": {},
    "outputs": [],
@@ -854,7 +854,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 147,
+   "execution_count": 14,
    "id": "9468c008-9cf6-43c2-aa70-3d8abe6b6eb3",
    "metadata": {},
    "outputs": [
@@ -864,7 +864,7 @@
        "21"
       ]
      },
-     "execution_count": 147,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -876,7 +876,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 148,
+   "execution_count": 15,
    "id": "e6a83f72-b51f-41ce-8b7a-436f8973974a",
    "metadata": {},
    "outputs": [
@@ -1284,7 +1284,7 @@
        "946           130        NaN  "
       ]
      },
-     "execution_count": 148,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1299,18 +1299,20 @@
    "id": "a1b0b8e2-57f8-4bd7-b9a0-b837682709f3",
    "metadata": {},
    "source": [
-    "# **Result file**  "
+    "# **Result file**  \n",
+    "\n",
+    "The records with missing unit costs have been saved to a new file for further investigation."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 150,
+   "execution_count": 16,
    "id": "88c7e962-1133-4fff-b6fc-582692cd8665",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Generate a new filename with today's date\n",
-    "file_name = \"MissingCount_Carol_Chan_\"+ date.today().isoformat()+'.csv'\n",
+    "file_name = \"MissingUnitCost_Carol_Chan_\"+ date.today().isoformat()+'.csv'\n",
     "\n",
     "# Save the DataFrame to a CSV file\n",
     "missing_costs.to_csv(\"../Result/\"+ file_name)"
